230206 저장1 후기 탭 호출 검토후 4번째 추가 기능 테스트3 메니페스트 파일 액티비티 확인.해결. 공개,비공개 검토

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,9 @@
             </intent-filter>
         </activity>
         <activity
+            android:name="com.android4.travel.DiaryFiles.Diary2Activity"
+            android:exported="false" />
+        <activity
             android:name="com.android4.travel.InputTripActivity"
             android:exported="false" />
         <activity
