230213 저장1  디비에 base64 조회가 안되어서, 앱 내부에서 인코딩 후, 읽어서 지정한 경로에 파일을 만들어서 거기에 쓰고 읽기 테스트 중.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Travel"
         android:usesCleartextTraffic="true">
+
+        <!--File Provider Start-->
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.android4.travel.fileprovider"
+            android:grantUriPermissions="true"
+            android:exported="false">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+        <!--File Provider End-->
+
+
         <activity
             android:name="com.android4.travel.DiaryFiles.DiaryUpdateActivity"
             android:exported="false">
