--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,6 @@
 
     <application
         android:name=".MyApplication"
-
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -23,6 +22,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Travel"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".DiaryFiles.FireDbDetailActivity"
+            android:exported="true">
+
+        </activity>
         <activity
             android:name=".AuthActivity"
             android:exported="true">
